tui/tests/snapshots/snapshot_tests__help_overlay.snap
---
source: tests/snapshot_tests.rs
expression: "render_to_string(&mut app, 80, 30)"
---
TestBackend { buffer: Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 30 },
    content: [
        " Flutter  │  Agent  │  Interactions  │  Treetest_app │ @app-one │ pid 12345     ",
        "┌ Flutter [1/0] ───────────────────────────────────────────────────────────────┐",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│               ┌ Help ────────────────────────────────────────┐               │",
        "│               │  Navigation                                  │               │",
        "│               │    h/l           prev/next tab               │               │",
        "│               │    j/k, ↑/↓      scroll (or navigate tree)   │               │",
        "│               │    g/G           top/bottom of logs          │               │",
        "│               │                                              │               │",
        "│               │  Sessions                                    │               │",
        "│               │    s             open session picker         │               │",
        "│               │    c             create new session (in picke│               │",
        "│               │    d             delete session (in picker)  │               │",
        "│               │                                              │               │",
        "│               │  App Control                                 │               │",
        "│               │    p             run app (when stopped)      │               │",
        "│               │    x             stop app (when running)     │               │",
        "│               │    r             hot reload (when running)   │               │",
        "│               │    R             hot restart (when running)  │               │",
        "│               │                                              │               │",
        "│               │  Tree Tab                                    │               │",
        "│               │    ←/→           collapse/expand node        │               │",
        "│               │    Enter, Space  toggle node                 │               │",
        "│               └──────────────────────────────────────────────┘               │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        "Esc:close q:quit                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 0, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 66, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 29, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 27, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 14, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 15, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 15, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 17, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 17, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 17, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 18, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 18, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 18, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 19, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 19, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 19, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 20, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 20, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 20, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 21, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 21, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 22, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 22, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 27, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 22, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 23, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 23, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 24, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 24, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 24, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 24, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 25, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 25, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 26, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 27, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 29, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 29, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 29, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 29, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}, scrollback: Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 0 }
}, cursor: false, pos: (0, 0) }
